k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obe-app-ingress
  namespace: obe-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - obe.krschap.tech
    secretName: obe-app-tls
  rules:
  - host: obe.krschap.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: obe-app-web
            port:
              number: 8000
